--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class="bottom">
     <img src="img/lumberjoe.png" alt="beard" class="beard1">
-    <h2 class="h2a">>Hello,  I’m Jose, a old fox.</h2>
+    <h2 class="h2a">I’m Jose, an old fox.</h2>
     <p class="intro"> I am a Python enthusiastic, Data Science newbie and a web developer in training, always intrigued by the Stock markets and how they work, Electronic engineer by education and a Network support guy 24/7 as way of living. Triathlon and Karate are my sports of choice, I love a good bitter espresso and a smile.
     </p>
 
